# Login-Register-Page

./: CMakeLists.txt  CircularReveal.h  Login.qml  Main.qml  Register.qml  main.cpp
